use official dns record

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: cSploit
 email: blog@csploit.org
 description: "Official cSploit blog"
 baseurl: "/"
-url: "http://csploit.github.io"
+url: "http://www.csploit.org"
 twitter_username: cSploit
 github_username: cSploit
 
